[project]
name = "ash"
version = "0.5.0"
description = "Ayon service host"
authors = ["Ynput <info@ynput.io>", "Martin Wacker <martin@ynput.io"]
requires-python = ">=3.11,<3.12"
dependencies = [
    "pydantic-settings>=2.8.1",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "docker>=7.1.0",
    "requests>=2.32.3",
    "loguru>=0.7.3",
    "unidecode>=1.3.8",
]



[tool.ruff]
line-length = 88

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

ignore = [
    "ISC001", # incompatible with formatting
    "E721",  # do not compare types, i'll fix this later :)
    "C901",  # too complex. C'mon - this is a complex project
]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
explicit_package_bases = true
strict_optional = true

exclude = "^[test|tool].*"

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.0",
    "types-docker>=7.1.0.20241229",
    "types-psutil>=7.0.0.20250218",
    "types-requests>=2.32.0.20250306",
]
