[project]
name = "ash"
version = "0.5.0"
description = "Ayon service host"
authors = ["Ynput <info@ynput.io>", "Martin Wacker <martin@ynput.io"]
requires-python = ">=3.11,<3.12"
dependencies = [
  "pydantic-settings>=2.8.1",
  "pydantic>=2.10.6",
  "python-dotenv>=1.0.1",
  "docker>=7.1.0",
  "requests>=2.32.3",
  "loguru>=0.7.3",
  "unidecode>=1.3.8",
  "psutil>=7.0.0",
]

[dependency-groups]

dev = [
  "ruff >=0.11.0",
  "mypy >=1.15.0",
  "types-requests >=2.31.0.20240311",
  "types-psutil>=7.0.0.20250516",
  "types-docker>=7.1.0.20250516",
  "pre-commit >=2.20.0",
  "tomlkit >=0.13.2",
  "mkdocs-material >=9.6.7",
  "mkdocs-autoapi >=0.4.0",
  "mkdocstrings-python >=1.16.2",
  "mkdocstrings-shell >=1.0.2",
  "mkdocs-minify-plugin >=0.8.0",
  "markdown-checklist >=0.4.4",
  "mdx-gh-links >=0.4",
  "pymdown-extensions >=10.14.3",
  "mike >=2.1.3",
]


[tool.ruff]
line-length = 88

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

ignore = [
    "ISC001", # incompatible with formatting
    "E721",  # do not compare types, i'll fix this later :)
    "C901",  # too complex. C'mon - this is a complex project
]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
explicit_package_bases = true
strict_optional = true

exclude = "^[test|tool|mkdocs_hooks.py].*"

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

